[package]
name = "integral"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    # "launchers/wasm",
    "launchers/native",
    "bevy_touch_camera"
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 3
lto = "thin"

[target.'cfg(not(target_arch="wasm32"))'.profile.dev.package."*"]
opt-level = 3

[target.'cfg(target_arch="wasm32")'.profile.dev.package."*"]
opt-level = 's'

[target.'cfg(target_arch="wasm32")'.profile.release]
opt-level = 's'
[target.'cfg(target="wasm32-unknown-unknown")'.profile.release]
opt-level = 's'

[workspace.dependencies]
log = "0.4.19"
bevy = { version = "0.12", default-features = false, features = [
    "android_shared_stdcxx",
    "tonemapping_luts",
    "bevy_render",
    "bevy_asset",
    "bevy_audio",
    "bevy_scene",
    "bevy_winit",
    "bevy_text",
    "bevy_pbr",
    "bevy_ui",
    "zstd",
    "ktx2",
    "png",
    "x11",
    "wav",
    "webgl2",
    "bevy_gizmos",
    "default_font",
] }

[features]
default = []
inspect = [
    "bevy-inspector-egui",
    "bevy_panorbit_camera/bevy_egui",
]

[target.'cfg(not(target_family = "wasm"))'.features]
inspect = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy.workspace = true
bevy-inspector-egui = { version = "0.21.0", optional = true }
bevy_panorbit_camera = { version = "0.9.0" }
# bevy_touch_camera = "0.1.1"
bevy_touch_camera = { version = "0.1.1", path = "bevy_touch_camera" }
fastrand = "2.0.1"
log.workspace = true
